feat:add documentation for books
