# controller/book_controller.go
@@ -4,6 +4,7 @@ import (
 	"learning_lantern/helper"
 	"learning_lantern/models"
 	"learning_lantern/repository"
+	"log"
 	"net/http"
 	"strconv"
 
@@ -15,6 +16,18 @@ type BookController struct {
 	repository.BookRepo
 }
 
+// ListAllBooks godoc
+// @Summary Get all books
+// @Description Get all books
+// @Tags Books
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Success 200 {array} models.Book
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/books [get]
 func (s *BookController) ListAllBooks(c echo.Context) error {
 	books, err := s.BookRepo.GetAllBooks()
 	if err != nil {
@@ -24,6 +37,18 @@ func (s *BookController) ListAllBooks(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Get All Books", "Books": books})
 }
 
+// ListAvailableBooks godoc
+// @Summary Get all books
+// @Description Get all books that can be rented, stock >0
+// @Tags Books
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Success 200 {array} models.BookAvailable
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/books/available [get]
 func (s *BookController) ListAvailableBooks(c echo.Context) error {
 	books, err := s.BookRepo.GetAllAvailableBooks()
 	if err != nil {
@@ -33,6 +58,19 @@ func (s *BookController) ListAvailableBooks(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Get All Available Books", "Books": books})
 }
 
+// AddNewBook godoc
+// @Summary Add new book to library [ONLY FOR ADMIN]
+// @Description Add new book to library
+// @Tags Books
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param student body models.BookRequest true "Books to be inserted"
+// @Success 200 {object} models.Book
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/book [post]
 func (s *BookController) AddNewBook(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "admin" {
@@ -59,6 +97,20 @@ func (s *BookController) AddNewBook(c echo.Context) error {
 	return c.JSON(http.StatusCreated, map[string]interface{}{"Message": "New Book Created", "Books": book})
 }
 
+// EditBook godoc
+// @Summary Edit book to library [ONLY FOR ADMIN]
+// @Description Edit book to library but you can insert body data that you need to update only
+// @Tags Books
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param id path string true "Book ID"
+// @Param student body models.BookRequest true "Books to be inserted"
+// @Success 200 {object} models.Book
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/book/{id} [put]
 func (s *BookController) EditBook(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "admin" {
@@ -69,7 +121,7 @@ func (s *BookController) EditBook(c echo.Context) error {
 	if err != nil {
 		return helper.ParseError(helper.ErrInvalidId, c)
 	}
-
+	log.Println(book_id)
 	var GetB models.BookRequest
 	err = c.Bind(&GetB)
 	if err != nil {
@@ -84,6 +136,19 @@ func (s *BookController) EditBook(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Book Updated", "Books": resp})
 }
 
+// DeleteBook godoc
+// @Summary Delete book [ONLY FOR ADMIN]
+// @Description Delete book from library database
+// @Tags Books
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Param id path string true "Book ID"
+// @Success 200 {object} models.Book
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/book/{id} [delete]
 func (s *BookController) DeleteBook(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "admin" {
@@ -102,6 +167,18 @@ func (s *BookController) DeleteBook(c echo.Context) error {
 	return c.JSON(http.StatusOK, map[string]interface{}{"Message": "Book Deleted", "Books": resp})
 }
 
+// ListOfUnavailableBooks godoc
+// @Summary Get all unavailable books [ONLY FOR USER]
+// @Description Get all books that can be rented but now is out of stock because another user still using it
+// @Tags Books
+// @Accept  json
+// @Produce  json
+// @Param   Authorization  header  string  true  "Authentication token"  default()
+// @Success 200 {array} models.BookUnavailable
+// @Failure 400 {object} map[string]interface{}
+// @Failure 404 {object} map[string]interface{}
+// @Failure 500 {object} map[string]interface{}
+// @Router /api/books/unavailable [get]
 func (s *BookController) ListOfUnavailableBooks(c echo.Context) error {
 	cred := helper.GetCredential(c)
 	if cred.Role != "user" {
